--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                                             <!-- name-and-slogan -->
                                             <div class="site-slogan">
-                                                Multipurpose HTML5 Template
+                                                This is a test
                                             </div>
 
                                         </div>
