--- a/index.html
+++ b/index.html
@@ -1,65 +1,31 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html dir="ltr" lang="en">
-
 <head>
     <meta charset="utf-8">
     <title>The Project | Home</title>
     <meta name="author" content="author">
     <meta name="robots" content="noimageindex">
-
-
-
-
-    <!-- Mobile Meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Web Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Font Awesome CSS -->
-    <link href="css/font-awesome.css" rel="stylesheet">
-
-    <!-- Plugins -->
-    <link href="css/magnific-popup.css" rel="stylesheet">
-    <link href="css/settings.css" rel="stylesheet">
-    <link href="css/layers.css" rel="stylesheet">
-    <link href="css/navigation.css" rel="stylesheet">
-    <link href="css/animations.css" rel="stylesheet">
-    <link href="css/slick.css" rel="stylesheet">
-
-    <!-- The Project's core CSS file -->
-    <!-- Use css/rtl_style.css for RTL version -->
-    <link href="css/style.css" rel="stylesheet">
-    <!-- The Project's Typography CSS file, includes used fonts -->
-    <!-- Used font for body: Lato -->
-    <!-- Used font for headings: Roboto Slab -->
-    <!-- Use css/rtl_typography-scheme-2.css for RTL version -->
-    <link href="css/typography-scheme-2.css" rel="stylesheet">
-    <!-- Color Scheme (In order to change the color scheme, replace the blue.css with the color scheme that you prefer) -->
-    <link href="css/skins/brown.css" data-style="styles-no-cookie" rel="stylesheet">
-
-    <!-- Custom css -->
-    <link href="css/custom.css" rel="stylesheet">
-
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/font-awesome.css" rel="stylesheet">
+    <link href="/css/magnific-popup.css" rel="stylesheet">
+    <link href="/css/settings.css" rel="stylesheet">
+    <link href="/css/layers.css" rel="stylesheet">
+    <link href="/css/navigation.css" rel="stylesheet">
+    <link href="/css/animations.css" rel="stylesheet">
+    <link href="/css/slick.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/typography-scheme-2.css" rel="stylesheet">
+    <link href="/css/skins/brown.css" data-style="styles-no-cookie" rel="stylesheet">
+    <link href="/css/custom.css" rel="stylesheet">
 </head>
-
-<!-- body classes:  -->
-<!-- "boxed": boxed layout mode e.g. <body class="boxed"> -->
-<!-- "pattern-1 ... pattern-9": background patterns for boxed layout mode e.g. <body class="boxed pattern-1"> -->
-<!-- "transparent-header": makes the header transparent and pulls the banner to top -->
-<!-- "gradient-background-header": applies gradient background to header -->
-<!-- "page-loader-1 ... page-loader-6": add a page loader to the page (more info @components-page-loaders.html) -->
 <body class="gradient-background-header front-page transparent-header">
-
-    <!-- scrollToTop -->
-    <!-- ================ -->
     <div class="scrollToTop circle"><i class="fa fa-angle-up"></i></div>
 
     <!-- page wrapper start -->
@@ -995,30 +961,30 @@
     <!-- JavaScript files placed at the end of the document so the pages load faster -->
     <!-- ================================================== -->
     <!-- Jquery and Bootstap core js files -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <!-- jQuery Revolution Slider  -->
-    <script src="js/jquery.themepunch.tools.min.js"></script>
-    <script src="js/jquery.themepunch.revolution.min.js"></script>
+    <script src="/js/jquery.themepunch.tools.min.js"></script>
+    <script src="/js/jquery.themepunch.revolution.min.js"></script>
     <!-- Isotope javascript -->
-    <script src="js/imagesloaded.pkgd.min.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
+    <script src="/js/imagesloaded.pkgd.min.js"></script>
+    <script src="/js/isotope.pkgd.min.js"></script>
     <!-- Magnific Popup javascript -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="/js/jquery.magnific-popup.min.js"></script>
     <!-- Appear javascript -->
-    <script src="js/jquery.waypoints.js"></script>
-    <script src="js/sticky.js"></script>
+    <script src="/js/jquery.waypoints.js"></script>
+    <script src="/js/sticky.js"></script>
     <!-- Count To javascript -->
-    <script src="js/jquery.countTo.js"></script>
+    <script src="/js/jquery.countTo.js"></script>
     <!-- Slick carousel javascript -->
-    <script src="js/slick.min.js"></script>
+    <script src="/js/slick.min.js"></script>
     <!-- Initialization of Plugins -->
-    <script src="js/template.js"></script>
+    <script src="/js/template.js"></script>
     <!-- Custom Scripts -->
-    <script src="js/custom.js"></script>
+    <script src="/js/custom.js"></script>
 
-    <script type="text/javascript" src="js/revolution.extension.carousel.min.js"></script>
-    <script type="text/javascript" src="js/revolution.extension.navigation.min.js"></script>
+    <script type="text/javascript" src="/js/revolution.extension.carousel.min.js"></script>
+    <script type="text/javascript" src="/js/revolution.extension.navigation.min.js"></script>
 
 </body>
 
