Why choose us complete
Why choose us complete

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="hc-item-box-2 hc-element-invisible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                                        <span class="icon without-bg"><i class="fa fa-connectdevelop"></i></span>
+                                        <span class="icon without-bg"><i class="fa fa-cogs"></i></span>
                                         <div class="body">
                                             <h4 class="title">Maintenance</h4>
                                             <p>Focus on what you do best and let us manage your Wordpress maintenance chores. We're good at it.</p>
@@ -163,7 +163,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="hc-item-box-2 hc-element-invisible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                                        <span class="icon without-bg"><i class="fa fa-snowflake-o"></i></span>
+                                        <span class="icon without-bg"><i class="fa fa-cubes"></i></span>
                                         <div class="body">
                                             <h4 class="title">Optimisation</h4>
                                             <p>It's 2019 and you can't afford to be slow. We can audit and fix SEO and website performance issues.</p>
@@ -176,7 +176,7 @@
                                         <span class="icon without-bg"><i class="fa fa-diamond"></i></span>
                                         <div class="body">
                                             <h4 class="title">Customer Service</h4>
-                                            <p>Every client wins with our professional services and customer service. It's a double-whammy.</p>
+                                            <p>Every client wins with our friendly, professional and efficient customer service.</p>
                                             <!--<a href="page-services.html">Read More<i class="pl-1 fa fa-angle-double-right"></i></a> -->
                                         </div>
                                     </div>
@@ -196,8 +196,8 @@
                         <h1 class="text-center mt-4 large">Why <strong>Choose</strong> <span class="text-default">WordPress Guy</span></h1>
                         <div class="separator"></div>
                         <p class="large text-center">
-                            Transparency, integrity, passionate and professional are only a few words to describe us.<br>
-                            Our work is our CV and we thrive through of word of mouth.
+                            Many websites built on WordPress are left in the dark when their developer or agency abandon them. And that's were WordPress Guy comes in.
+                            We are skillful, professional and passionate in helping these websites regain their dignity and momentum. Here is what you can expect...
                         </p>
                     </div>
                 </div>
@@ -206,106 +206,111 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="hc-item-box-2 hc-element-invisible right" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                            <span class="icon without-bg"><i class="fa fa-arrows"></i></span>
+                            <span class="icon without-bg"><i class="fa fa-object-group"></i></span>
                             <div class="body">
-                                <h4 class="title">Responsive Design</h4>
-                                <p>Our design is with responsive in mind. Our themes are compatible with various desktop, tablet, and mobile devices. <a href="page-services.html">Read More<i class="pl-1 fa fa-angle-double-right"></i></a></p>
+                                <h4 class="title text-default">Attentiveness</h4>
+                                <p>Our friendly consultants will listen to your needs with<br> your websites best interests at heart.</p>
                                 <div class="separator-3"></div>
                             </div>
                         </div>
                         <div class="hc-item-box-2 hc-element-invisible right" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                            <span class="icon without-bg"><i class="fa fa-bullhorn"></i></span>
+                            <span class="icon without-bg"><i class="fa fa-search"></i></span>
                             <div class="body">
-                                <h4 class="title">Inve et ita</h4>
-                                <p>Our design is with responsive in mind. Our themes are compatible with various desktop, tablet, and mobile devices. <a href="page-services.html">Read More<i class="pl-1 fa fa-angle-double-right"></i></a></p>
+                                <h4 class="title text-default">Transparency</h4>
+                                <p>In the hope of long standing relationships we will always<br> be transparent in our dealings with you.</p>
                                 <div class="separator-3"></div>
                             </div>
                         </div>
                         <div class="hc-item-box-2 hc-element-invisible right" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                            <span class="icon without-bg"><i class="fa fa-umbrella"></i></span>
+                            <span class="icon without-bg"><i class="fa fa-phone"></i></span>
                             <div class="body">
-                                <h4 class="title">Labore et dolore magna aliqua</h4>
-                                <p>Our design is with responsive in mind. Our themes are compatible with various desktop, tablet, and mobile devices. <a href="page-services.html">Read More<i class="pl-1 fa fa-angle-double-right"></i></a></p>
+                                <h4 class="title text-default">Communication</h4>
+                                <p>Proactive communication when working on your projects<br>  to ensure nothing is left to chance.</p>
                                 <div class="separator-3"></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="hc-item-box-2 hc-element-invisible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                            <span class="icon without-bg"><i class="fa fa-snowflake-o"></i></span>
+                            <span class="icon without-bg"><i class="fa fa-cogs"></i></span>
                             <div class="body">
-                                <h4 class="title">Lorem dolor sit</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod ut labore et dolore magna aliqua. <a href="page-services.html">Read More<i class="pl-1 fa fa-angle-double-right"></i></a></p>
+                                <h4 class="title text-default">Service</h4>
+                                <p>Your website uptime depends on our efficient service delivery.<br> We strive for perfection in this regard.</p>
                                 <div class="separator-2"></div>
                             </div>
                         </div>
                         <div class="hc-item-box-2 hc-element-invisible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                            <span class="icon without-bg"><i class=" fa fa-cogs"></i></span>
+                            <span class="icon without-bg"><i class="fa fa-dollar ml-2"></i></span>
                             <div class="body">
-                                <h4 class="title">Unt in culpa qui</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod ut labore et dolore magna aliqua. <a href="page-services.html">Read More<i class="pl-1 fa fa-angle-double-right"></i></a></p>
+                                <h4 class="title text-default">Value</h4>
+                                <p>With vast skills in digital marketing and development, you<br> always get more than the services offered.</p>
                                 <div class="separator-2"></div>
                             </div>
                         </div>
                         <div class="hc-item-box-2 hc-element-invisible" data-animation-effect="fadeInDownSmall" data-effect-delay="100">
-                            <span class="icon without-bg"><i class="fa fa-star-o"></i></span>
+                            <span class="icon without-bg"><i class="fa fa-file-text-o"></i></span>
                             <div class="body">
-                                <h4 class="title">Quis harum</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod ut labore et dolore magna aliqua. <a href="page-services.html">Read More<i class="pl-1 fa fa-angle-double-right"></i></a></p>
+                                <h4 class="title text-default">Feedback</h4>
+                                <p>You will always receive a detailed account of the events<br> when work is done on your project.</p>
                                 <div class="separator-2"></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- slider revolution start -->
-            <!-- ================ -->
-            <div class="slider-revolution-5-container">
-                <div id="slider-banner-carousel" class="slider-banner-carousel rev_slider" data-version="5.0">
-                    <ul class="slides">
 
-                        <!-- slide 1 start -->
-                        <!-- ================ -->
-                        <li data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="300" data-saveperformance="off" data-title="Slide Title">
-
-                            <!-- main image -->
-                            <img src="images/section-image-4.png" alt="slidebg1" data-bgposition="center center" data-bgfit="contain" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
-
-                        </li>
-                        <!-- slide 1 end -->
-                        <!-- slide 2 start -->
-                        <!-- ================ -->
-                        <li data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="300" data-saveperformance="off" data-title="Slide Title">
-
-                            <!-- main image -->
-                            <img src="images/section-image-1.png" alt="slidebg1" data-bgposition="center center" data-bgfit="contain" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
-
-                        </li>
-                        <!-- slide 2 end -->
-                        <!-- slide 3 start -->
-                        <!-- ================ -->
-                        <li data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="300" data-saveperformance="off" data-title="Slide Title">
-
-                            <!-- main image -->
-                            <img src="images/section-image-2.png" alt="slidebg1" data-bgposition="center center" data-bgfit="contain" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
-
-                        </li>
-                        <!-- slide 3 end -->
-                        <!-- slide 4 start -->
-                        <!-- ================ -->
-                        <li data-transition="fade" data-slotamount="default" data-easein="default" data-easeout="default" data-masterspeed="300" data-saveperformance="off" data-title="Slide Title">
-
-                            <!-- main image -->
-                            <img src="images/section-image-3.png" alt="slidebg1" data-bgposition="center center" data-bgfit="contain" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
-
-                        </li>
-                        <!-- slide 4 end -->
-
-                    </ul>
-                </div>
-            </div>
-            <!-- slider revolution end -->
-        </section>
+            <section class="pv-30 padding-bottom-clear">
+                <div class="container-fluid">
+                    <div class="row justify-content-lg-center">
+                        <div class="col-lg-10">
+                            <h1 class="text-center mt-4 large">Our <strong>Technology</strong> <span class="text-default">Skill Set</span></h1>
+                            <div class="separator"></div>
+                        </div>
+                    </div>
+                    <div class="slick-carousel clients">
+                        <div class="client">
+                            <img src="/images/html5_wordpressguy.png" alt="HTML5 Logo" title="HTML & HTML5" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/css3_wordpressguy.png" alt="CSS3 logo" title="CSS & CSS3" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/js_wordpressguy.png" alt="JavaScript Logo" title="JavaScript" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/jquery_wordpressguy.png" alt="JQuery Logo" title="JQuery" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/json_wordpressguy.png" alt="JSON Logo" title="JSON" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/bootstrap_wordpressguy.png" alt="Bootstrap Logo" title="Bootstrap Framework" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/wordpress_wordpressguy.png" alt="Wordpress Logo" title="WordPress" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/php_wordpressguy.png" alt="PHP Logo" title="PHP5 & PHP7" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/mysql_wordpressguy.png" alt="MySql Logo" title="MySql" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/python_wordpressguy.png" alt="Python Programming Logo" title="Python Programming" style="width:100%; max-width:200px;">
+                        </div>
+                        <div class="client">
+                            <img src="/images/django_wordpressguy.png" alt="Django Framework Logo" title="Django Framework" width="200px" style="width: 100%; max-width:200px;">
+                        </div>
+                        <!--
+                        <div class="client">
+                            <img src="/images/afrihost_wordpressguy.png" alt="Afrihost Logo" title="Afrihost" style="width:100%; max-width:200px;">
+                        </div>
+                        -->
+                        <div class="client">
+                            <img src="/images/aws_wordpressguy.png" alt="AWS Logo" title="Amazon Web Services" style="width:100%; max-width:200px;">
+                        </div>
+                    </div>
+            </section>
         <!-- section end -->
 
         <section class="pv-40">
