--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8">
-    <title>The Project | Home</title>
+    <title>WordPress Guy | Home</title>
     <meta name="author" content="author">
     <meta name="robots" content="noimageindex">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -317,9 +317,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="text-center mt-4">Choose your plan</h2>
+                        <h1 class="text-center mt-4 large">WordPress <strong>Maintenance</strong> <span class="text-default">Packages</span></h1>
                         <div class="separator"></div>
-                        <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste doloremque, mollitia voluptatibus nobis. Esse ut dolore laboriosam id fugit impedit totam voluptate, itaque praesentium accusantium, laborum eius autem, veritatis labore!</p>
+                        <p class="large text-center">
+                            We have three different packages - Standard, E-Commerce and Corporate, each of them designed to help your specific websites excel online!
+                        </p>
                     </div>
                 </div>
                 <!-- pricing tables start -->
@@ -331,22 +333,27 @@
                             <!-- ================ -->
                             <div class="plan hc-shadow light-gray-bg bordered">
                                 <div class="header dark-bg">
-                                    <h3>Basic</h3>
-                                    <div class="price"><span>Free</span></div>
+                                    <h3>Standard</h3>
+                                    <div class="price"><span>R500</span>/m.</div>
                                 </div>
                                 <ul>
-                                    <li>Pricing table item</li>
+                                    <li><h5 class="title text-default">Once-Off</h5></li>
+                                    <li>Website Assessment</li>
+                                    <li>Staging/Test Environment Setup</li>
+                                    <li><h5 class="title text-default">Monthly</h5></li>
+                                    <li>Pre Deployment Backup</li>
+                                    <li>Pre Deployment Testing</li>
+                                    <li>Software/Core Updates</li>
+                                    <li>Plugin Updates</li>
+                                    <li>Theme Updates</li>
+                                    <li>Staging/Test Deployment</li>
+                                    <li>Bug Fixes Limited to 6h Annualy</li>
+                                    <li>Live Deployment</li>
+                                    <li>Post Deployment Backup</li>
                                     <li>
-                                        <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." title="" data-original-title="15GB Storage" data-trigger="hover">Pricing table item</a>
+                                        <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Explanation text goes here" title="" data-original-title="15 Email Acounts">Post Deployment Testing</a>
                                     </li>
-                                    <li>
-                                        <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." title="" data-original-title="15 Email Acounts">Pricing table item</a>
-                                    </li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li><a href="#" class="btn btn-dark radius-50 btn-animated btn-lg">Subscribe <i class="fa fa-user"></i></a></li>
+                                    <li><a href="mailto:wordpressguy@gmail.com?Subject=Standard%20Maintenance" class="btn btn-dark radius-50 btn-animated btn-lg">Contact Us <i class="fa fa-envelope-open"></i></a></li>
                                 </ul>
                             </div>
                             <!-- pricing table end -->
@@ -356,20 +363,27 @@
                             <!-- ================ -->
                             <div class="plan hc-shadow light-gray-bg bordered best-value">
                                 <div class="header default-bg">
-                                    <h3>Premium</h3>
-                                    <div class="price"><span>$19.99</span>/m.</div>
+                                    <h3>E-Commerce</h3>
+                                    <div class="price"><span>R800</span>/m.</div>
                                 </div>
                                 <ul>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
+                                    <li><h5 class="title text-default">Once-Off</h5></li>
+                                    <li>Website Assessment</li>
+                                    <li>Staging/Test Environment Setup</li>
+                                    <li><h5 class="title text-default">Monthly</h5></li>
+                                    <li>Pre Deployment Backup</li>
+                                    <li>Pre Deployment Testing</li>
+                                    <li>Software/Core Updates</li>
+                                    <li>Plugin Updates</li>
+                                    <li>Theme Updates</li>
+                                    <li>Staging/Test Deployment</li>
+                                    <li>Bug Fixes Limited to 12h Annualy</li>
+                                    <li>Live Deployment</li>
+                                    <li>Post Deployment Backup</li>
                                     <li>
-                                        <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." title="" data-original-title="Pricing table item">Pricing table item</a>
+                                        <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Explanation text goes here" title="" data-original-title="15 Email Acounts">Post Deployment Testing</a>
                                     </li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li><a href="#" class="btn btn-default btn-animated btn-lg radius-50">Add to cart <i class="fa fa-shopping-cart"></i></a></li>
+                                    <li><a href="mailto:wordpressguy@gmail.com?Subject=E-Commerce%20Maintenance" class="btn btn-default btn-animated btn-lg radius-50">Contact Us <i class="fa fa-envelope-open"></i></a></li>
                                 </ul>
                             </div>
                             <!-- pricing table end -->
@@ -379,20 +393,27 @@
                             <!-- ================ -->
                             <div class="plan hc-shadow light-gray-bg bordered">
                                 <div class="header dark-bg">
-                                    <h3>Pro</h3>
-                                    <div class="price"><span>$24.99</span>/m.</div>
+                                    <h3>Corporate</h3>
+                                    <div class="price"><span>Request Quote</span></div>
                                 </div>
                                 <ul>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
+                                    <li><h5 class="title text-default">Once-Off</h5></li>
+                                    <li>Website Assessment</li>
+                                    <li>Staging/Test Environment Setup</li>
+                                    <li><h5 class="title text-default">Monthly</h5></li>
+                                    <li>Pre Deployment Backup</li>
+                                    <li>Pre Deployment Testing</li>
+                                    <li>Software/Core Updates</li>
+                                    <li>Plugin Updates</li>
+                                    <li>Theme Updates</li>
+                                    <li>Staging/Test Deployment</li>
+                                    <li>Bug Fixes Limited to 12h Annualy</li>
+                                    <li>Live Deployment</li>
+                                    <li>Post Deployment Backup</li>
                                     <li>
-                                        <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." title="" data-original-title="Pricing table item">Pricing table item</a>
+                                        <a href="#" class="pt-popover" data-toggle="popover" data-placement="right" data-content="Explanation text goes here" title="" data-original-title="15 Email Acounts">Post Deployment Testing</a>
                                     </li>
-                                    <li>Pricing table item</li>
-                                    <li>Pricing table item</li>
-                                    <li><a href="#" class="btn btn-dark btn-animated btn-lg radius-50">Add to cart <i class="fa fa-shopping-cart"></i></a></li>
+                                    <li><a href="mailto:wordpressguy@gmail.com?Subject=Corporate%20Maintenance%20Quote" class="btn btn-dark radius-50 btn-animated btn-lg">Contact Us <i class="fa fa-envelope-open"></i></a></li>
                                 </ul>
                             </div>
                             <!-- pricing table end -->
