minor copy updates
minor copy updates

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                         <span class="icon without-bg"><i class="fa fa-cubes"></i></span>
                                         <div class="body">
                                             <h4 class="title text-default">Optimisation</h4>
-                                            <p>It's 2019 and you can't afford to be slow. We can audit and fix SEO and website performance issues.</p>
+                                            <p>It's 2019 and your site has to be fast to keep the user. We can audit and optimise website performance.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -173,7 +173,7 @@
                                         <span class="icon without-bg"><i class="fa fa-diamond"></i></span>
                                         <div class="body">
                                             <h4 class="title text-default">Customer Service</h4>
-                                            <p>You always wins with our friendly customer service, professional and efficient service delivery.</p>
+                                            <p>You always win with our friendly customer service, professional and efficient service delivery.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -190,8 +190,8 @@
                         <h1 class="text-center mt-4 large">Why <strong>Choose</strong> <span class="text-default">WordPress Guy</span></h1>
                         <div class="separator"></div>
                         <p class="large text-center">
-                            Many websites built on WordPress are left in the dark when their developer or agency abandon them. And that's were WordPress Guy comes in.
-                            We are skillful, professional and passionate in helping these websites regain their dignity and momentum. Here is what you can expect...
+                            Many websites that are built with WordPress are left in the dark when their developer or agency abandon them. And that's were WordPress Guy comes in.
+                            We are passionate about helping these websites regain their dignity and momentum. Here is what you can expect...
                         </p>
                     </div>
                 </div>
@@ -275,17 +275,18 @@
                         <img src="/images/js_wordpressguy.png" alt="JavaScript Logo" title="JavaScript" style="width:100%; max-width:200px;">
                     </div>
                     <div class="client">
-                        <img src="/images/jquery_wordpressguy.png" alt="JQuery Logo" title="JQuery" style="width:100%; max-width:200px;">
+                        <img src="/images/php_wordpressguy.png" alt="PHP Logo" title="PHP5 & PHP7" style="width:100%; max-width:200px;">
                     </div>
                     <div class="client">
                         <img src="/images/bootstrap_wordpressguy.png" alt="Bootstrap Logo" title="Bootstrap Framework" style="width:100%; max-width:200px;">
                     </div>
                     <div class="client">
-                        <img src="/images/json_wordpressguy.png" alt="JSON Logo" title="JSON" style="width:100%; max-width:200px;">
+                        <img src="/images/jquery_wordpressguy.png" alt="JQuery Logo" title="JQuery" style="width:100%; max-width:200px;">
                     </div>
                     <div class="client">
-                        <img src="/images/php_wordpressguy.png" alt="PHP Logo" title="PHP5 & PHP7" style="width:100%; max-width:200px;">
+                        <img src="/images/json_wordpressguy.png" alt="JSON Logo" title="JSON" style="width:100%; max-width:200px;">
                     </div>
+
                     <div class="client">
                         <img src="/images/mysql_wordpressguy.png" alt="MySql Logo" title="MySql" style="width:100%; max-width:200px;">
                     </div>
@@ -392,7 +393,7 @@
                                 </div>
                                 <ul>
                                     <li class="px-5">
-                                        <p>Corporate companies or agencies with a number of WordPress websites that need maintenance and monitoring can contact us for a discounted quotation on our maintenance services.</p>
+                                        <p>Corporate companies or agencies with a number of WordPress websites that need maintenance and monitoring can contact us for a quotation on our maintenance services.</p>
                                         <p>All websites will receive the same services as the e-Commerce package.</p>
                                     </li>
                                     <li>
